Snapshot virtual inventory contents before saving